Fixed nav spacing and font errors

--- a/UI/style.css
+++ b/UI/style.css
@@ -1,11 +1,18 @@
+html, body {
+    width:100%;
+    height:100%;
+    margin:0;
+    padding:0;
+}
 ul {
-list-style-type: none;
-margin: 0;
-padding: 0;
-overflow: hidden;
-background-color: black;
-font-family: Helvetica-light, Tahoma, san-serif;
-font-size: 22px;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: black;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 22px;
+    width:100%;
 }
 li {
 	float: left;
@@ -33,6 +40,6 @@ img {
 }
 h1 {
 	text-align: center;
-	font-family: Helvetica-light, Tahoma, san-serif;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 72px;
 }
